src/tests/samples/from-reny/badarray2.gt.bad.out
Parse error at (line 2, column 11):
unexpected "]"
expecting term
