src/tests/samples/from-reny/badarray2.gt.bad
proc main()
    int a[];
begin
    a[] := 12;
end
